--- a/app/src/main/res/layout/fragment_doc_unread.xml
+++ b/app/src/main/res/layout/fragment_doc_unread.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragment.calendal.CalendarWeek">
+    tools:context=".fragment.document.FragmentDocUnread">
 
-
-
-
+    <!-- TODO: Update blank fragment layout -->
+  <include
+      layout="@layout/refresh_rcview"
+      ></include>
 
 </FrameLayout>
