--- a/app/src/main/res/layout/calendal_item_lichbtgd.xml
+++ b/app/src/main/res/layout/calendal_item_lichbtgd.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:id="@+id/rlCalBTGD"
+    android:id="@+id/rlLichtBTGD"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="wrap_content"
