--- a/app/src/main/res/layout/doc_item_all.xml
+++ b/app/src/main/res/layout/doc_item_all.xml
@@ -2,7 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:id="@+id/rlDocWait"
+    android:id="@+id/rlDocall"
     android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="wrap_content"
