--- a/app/src/main/res/layout/item_doccument.xml
+++ b/app/src/main/res/layout/item_doccument.xml
@@ -26,13 +26,14 @@
                 android:layout_width="wrap_content"
                 android:layout_alignParentRight="true"
                 android:id="@+id/dot_right"
-
+                android:visibility="gone"
+                android:layout_centerInParent="true"
                 android:layout_height="wrap_content">
                 <ImageView
                     android:layout_width="10dp"
                     android:layout_height="10dp"
                     android:layout_marginRight="10dp"
-
+                    android:id="@+id/img_dot"
                     android:src="@drawable/ic_bg_ngaychon_03"/>
 
             </RelativeLayout>
@@ -56,15 +57,17 @@
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-
+                android:visibility="gone"
+                android:id="@+id/img_info"
                 android:layout_alignParentLeft="true"
                 android:src="@drawable/icon_info"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/BLUE"
+                android:textSize="@dimen/text_date_sign"
                 android:layout_alignParentRight="true"
-                android:text="20/402017 11:29"/>
+                android:text="20/4/2017 11:29"/>
 
         </RelativeLayout>
 
