--- a/app/src/main/res/layout/doc_item_library.xml
+++ b/app/src/main/res/layout/doc_item_library.xml
@@ -16,7 +16,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_search_gray"/>
+                android:src="@drawable/ic_quychequydinh"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
