--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/sign_item_swipe"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/height_item">
+    android:layout_height="wrap_content">
   <include
       layout="@layout/swip_item_menu"
       ></include>
