--- a/app/src/main/res/layout/refresh_rcview.xml
+++ b/app/src/main/res/layout/refresh_rcview.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ListView
+<android.support.v7.widget.RecyclerView
     android:id="@+id/rc_view"
     android:layout_width="match_parent"
     android:scrollbars="none"
