--- a/app/src/main/res/layout/swip_item_menu.xml
+++ b/app/src/main/res/layout/swip_item_menu.xml
@@ -2,7 +2,7 @@
     android:background="#66ddff00"
     android:id="@+id/bottom_wrapper"
     android:layout_width="wrap_content"
-
+    android:gravity="right"
     android:orientation="horizontal"
 
     android:layout_height="match_parent"
@@ -87,8 +87,8 @@
         android:layout_height="match_parent"
         android:background="@color/lam">
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/ic_mail_nhanh"/>
     </RelativeLayout>
     <RelativeLayout
@@ -99,8 +99,8 @@
         android:visibility="gone"
         android:background="@color/ORANGE">
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:src="@drawable/ic_sms_nhanh"/>
     </RelativeLayout>
     <!--What you want to show-->
